5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1592_820.log
== TEST (2019-03-31 14:42:03) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R$50
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:45:30) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
var1=valor//50

# Valor restante a ser sacado com notas menores que R$ 50
var2=valor%50

# Quantidade de notas de R$ 10
var3=var2// 10

# Valor restante a ser sacado com notas menores que R$ 50
var4=var3%10

# Quantidade de notas de R$ 2
var5=var4// 2

print(int(var1))
print(int(var3))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 24
    print(int(notas_R$2))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:45:38) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
var1=valor//50

# Valor restante a ser sacado com notas menores que R$ 50
var2=valor%50

# Quantidade de notas de R$ 10
var3=var2// 10

# Valor restante a ser sacado com notas menores que R$ 50
var4=var3%10

# Quantidade de notas de R$ 2
var5=var4// 2

print(int(var1))
print(int(var3))
print(int(var5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    var1=valor//50
TypeError: unsupported operand type(s) for //: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:46:36) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor=input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
var1=valor//50

# Valor restante a ser sacado com notas menores que R$ 50
var2=valor%50

# Quantidade de notas de R$ 10
var3=var2// 10

# Valor restante a ser sacado com notas menores que R$ 50
var4=var3%10

# Quantidade de notas de R$ 2
var5=var4// 2

print(int(var1))
print(int(var3))
print(int(var5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    var1=valor//50
TypeError: unsupported operand type(s) for //: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:47:01) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor=input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
var1=int(valor//50)

# Valor restante a ser sacado com notas menores que R$ 50
var2=valor%50

# Quantidade de notas de R$ 10
var3=var2// 10

# Valor restante a ser sacado com notas menores que R$ 50
var4=var3%10

# Quantidade de notas de R$ 2
var5=var4// 2

print(int(var1))
print(int(var3))
print(int(var5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    var1=int(valor//50)
TypeError: unsupported operand type(s) for //: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:47:36) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor=int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
var1=(valor//50)

# Valor restante a ser sacado com notas menores que R$ 50
var2=valor%50

# Quantidade de notas de R$ 10
var3=var2// 10

# Valor restante a ser sacado com notas menores que R$ 50
var4=var3%10

# Quantidade de notas de R$ 2
var5=var4// 2

print(int(var1))
print(int(var3))
print(int(var5))

-- OUTPUT:
40
2
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:49:13) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor=int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
var1=valor//50

# Valor restante a ser sacado com notas menores que R$ 50
var2=valor%50

# Quantidade de notas de R$ 10
var3=var2//10

# Valor restante a ser sacado com notas menores que R$ 50
var4=var3%10

# Quantidade de notas de R$ 2
var5=var4//2

print(int(var1))
print(int(var3))
print(int(var5))

-- OUTPUT:
40
2
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:52:05) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor=int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
var1=valor//50

# Valor restante a ser sacado com notas menores que R$ 50
var2=valor%50

# Quantidade de notas de R$ 10
var3=var2//10

# Valor restante a ser sacado com notas menores que R$ 50
var4=var2%10

# Quantidade de notas de R$ 2
var5=var4//2

print(int(var1))
print(int(var3))
print(int(var5))

-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:52:11) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor=int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
var1=valor//50

# Valor restante a ser sacado com notas menores que R$ 50
var2=valor%50

# Quantidade de notas de R$ 10
var3=var2//10

# Valor restante a ser sacado com notas menores que R$ 50
var4=var2%10

# Quantidade de notas de R$ 2
var5=var4//2

print(int(var1))
print(int(var3))
print(int(var5))

-- EXECUTION TIME:
0.162739
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
